# dashboard

./: .gitignore  Cargo.toml  Cross.toml  dashboard.drawio  main.py  pyproject.toml
db/: setting.sql
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: bme.rs  clock.rs  datetime.rs  db.rs  home.rs  lib.rs  main.rs
src/entities/: app_slot.rs  mod.rs  prelude.rs  room_temp.rs
ui/: app.slint  datetime.slint  global.slint  home.slint  side.slint
