[package]
name = "dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.1"
sea-orm = { version = "1.1", features = [ 
    "sqlx-sqlite", 
    "runtime-tokio-native-tls", 
    "macros",
    "with-chrono"
] }
chrono = "0.4"
tokio = { version = "1.0", features = ["full"] }
bme280-rs = "0.3"
dotenvy = "0.15.7"

[target.'cfg(target_os = "linux")'.dependencies]
linux-embedded-hal = "0.4"