[package]
name = "dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "1.1", features = [ 
    "sqlx-sqlite", 
    "runtime-tokio-native-tls", 
    "macros",
    "with-chrono"
] }
chrono = "0.4"
tokio = { version = "1.0", features = ["full"] }
dotenvy = "0.15.7"
slint = "1.16.1"
tokio-cron-scheduler = "0.15.1"

[target.'cfg(target_os = "linux")'.dependencies]
bme280-rs = "0.3"
linux-embedded-hal = "0.4"

[build-dependencies]
slint-build = "1.16.1"

[profile.release]
codegen-units = 1
lto = true
